# tspi_lvgl

./: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
components/: CMakeLists.txt
components/ui_code/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_code/components/: ui_comp_hook.c
components/ui_code/screens/: ui_Screen1.c
