cmake_minimum_required(VERSION 3.1)
project(tspi_lvgl)
SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
SET(GCC_WAYLAND_LINK_FLAGS    "-lwayland-client -lwayland-cursor -lxkbcommon -lpthread -lffi -lrlottie")
include_directories(.)
include_directories(./components/ui_code)
include_directories(/home/wrt/Taishan/TaiShan_Ui/libraries/rlottie/rlottie/inc)
add_subdirectory(lvgl)
add_subdirectory(lv_drivers)
add_subdirectory(components)
add_executable(${PROJECT_NAME} main.c )
target_link_libraries(${PROJECT_NAME} PRIVATE lvgl lvgl::examples lvgl::demos lvgl::drivers)
target_link_libraries(${PROJECT_NAME} PRIVATE ${GCC_WAYLAND_LINK_FLAGS})
target_link_libraries(${PROJECT_NAME} PRIVATE ui)
